# python-postgres-pq-poc

./: README.md  create-a-job.py  docker-compose.yml  pyproject.toml  server.py
scripts/: enter-in-pg.sh  start-demo.sh
